# control-center

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  config.toml.example  pyproject.toml
.github/workflows/: ci.yml
src/control_center/: config.py  main.py  models.py
src/control_center/agent/: autofix.py  manager.py  review_store.py  reviewer.py
src/control_center/github/: client.py  pinned.py  poller.py  queries.py
src/control_center/web/: routes.py
src/control_center/web/static/: style.css
src/control_center/web/templates/: base.html  dashboard.html  settings.html
src/control_center/web/templates/partials/: autofix_log.html  global_log.html  my_prs.html  review_requests.html
tests/: test_autofix.py  test_config.py  test_manager.py  test_models.py  test_poller.py  test_routes_helpers.py
