[project]
name = "control-center"
version = "0.1.0"
description = "GitHub PR monitor and auto-fix dashboard"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "jinja2>=3.1",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "anyio>=4.0",
    "claude-agent-sdk>=0.1.51",
]

[project.scripts]
control-center = "control_center.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[dependency-groups]
dev = [
    "ruff>=0.15.8",
]
